login button color change

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       <form onsubmit="return authenticate()">
         <div class="mb-5">
           <label class="block font-bold mb-1" for="username">Username</label>
-          <input class="w-full px-4 py-2 border rounded" type="text" id="username" name="username" value="admin">
+          <input class="w-full px-4 py-2 border rounded" type="text" id="username" name="username">
         </div>
         <div class="mb-5">
           <label class="block font-bold mb-1" for="password">Password</label>
-          <input class="w-full px-4 py-2 border rounded" type="password" id="password" name="password" value="password">
+          <input class="w-full px-4 py-2 border rounded" type="password" id="password" name="password">
         </div>
         <div class="text-red-500 mb-5" id="error"></div>
-        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" type="submit">Login</button>
+        <button class="bg-blue-500 hover:bg-yellow-500 text-white font-bold py-2 px-4 rounded" type="submit">Login</button>
       </form>
     </div>
   </div>
