--- a/note.html
+++ b/note.html
@@ -14,10 +14,42 @@
       <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="inline-block w-8 h-8 text-gray-400 mb-8" viewBox="0 0 975.036 975.036">
         <path d="M925.036 57.197h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.399 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l36 76c11.6 24.399 40.3 35.1 65.1 24.399 66.2-28.6 122.101-64.8 167.7-108.8 55.601-53.7 93.7-114.3 114.3-181.9 20.601-67.6 30.9-159.8 30.9-276.8v-239c0-27.599-22.401-50-50-50zM106.036 913.497c65.4-28.5 121-64.699 166.9-108.6 56.1-53.7 94.4-114.1 115-181.2 20.6-67.1 30.899-159.6 30.899-277.5v-239c0-27.6-22.399-50-50-50h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.4 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l35.9 75.8c11.601 24.399 40.501 35.2 65.301 24.399z"></path>
       </svg>
-      <p class="leading-relaxed text-lg">Edison bulb retro cloud bread echo park, helvetica stumptown taiyaki taxidermy 90's cronut +1 kinfolk. Single-origin coffee ennui shaman taiyaki vape DIY tote bag drinking vinegar cronut adaptogen squid fanny pack vaporware. Man bun next level coloring book skateboard four loko knausgaard. Kitsch keffiyeh master cleanse direct trade indigo juice before they sold out gentrify plaid gastropub normcore XOXO 90's pickled cindigo jean shorts. Slow-carb next level shoindigoitch ethical authentic, yr scenester sriracha forage franzen organic drinking vinegar.</p>
+      <p class="leading-relaxed text-lg">Hello Madam. I hope this letter finds you well(too formal?).
+         I just wanted to do something chotu sa for you. I know two months is not a long time but 
+         It doesn't feel like it. It feels I've known you since a longgg time. 
+         We became so close and comfy with each other. It's a great feeling when
+         I can share anything and everything with you about my day and you listen to me with full attention.
+         You make me feel the happiest. You make me feel important. 
+         You are my lucky charm. Since I've met you, Great things are happening to me(touch wood).
+         Take an instance of my probation. Agree or not, you have equal share in that. Without you, 
+         Screw up krdeta kuch toh mai pkka
+         Thanks for not letting me get overwhelmed :).
+         Everytime I see a situation where I have no clue what to do, I think Tanya se baat krta hu
+         kuch toh solution milega hi.
+         You came into my life at the perfect time 💓
+         You're My Peace and you feel like home:) !!!
+         You understand my tech and code stuff also since you listen to it with so much seriousness and
+         you give relatable examples also ;) 
+         You know I was never a person who would admire sunrise and sunsets and stuff like that utna zyada. But now
+         I notice them everytime. I notice Aeroplanes and scream Aeroplaaannneeeeee.
+         I notice the small things more and I try to find positivity in almost every situation.
+         Best Company ka asar you know?
+         One thing that I admire the most about you is how you do everything so passionately and put your best into it
+         and I am very very proud of you for everything you've achieved and everything you do and know that it's just the
+         I was just waiting like crazy for your exams to get over so that we can meeetttttt.
+         I love spending time with you, talking to you, sharing things I never thought I would share with anyone.
+         I love how you put equal efforts and value me and give me your time.💓
+         I love how you remember each and every little detail that I tell you and find some reference to remember them
+         I made the best decision of not giving up on bumble lol.
+         What we have is very special and I want this to grow only:)
+         Thankyou for everything My Beautiful Girl.
+         I think its safe to say that You're the best thing that has ever happened to me.
+         You're the sweetest💓 
+         
+      </p>
       <span class="inline-block h-1 w-10 rounded bg-yellow-500 mt-8 mb-6"></span>
-      <h2 class="text-gray-900 font-medium title-font tracking-wider text-sm">HOLDEN CAULFIELD</h2>
-      <p class="text-gray-500">Senior Product Designer</p>
+      <h2 class="text-gray-900 font-medium title-font tracking-wider text-sm">Rishabh:)</h2>
+      <p class="text-gray-500"></p>
     </div>
   </div>
 </section>
