--- a/gallery.html
+++ b/gallery.html
@@ -12,17 +12,17 @@
     <section class="text-gray-600 body-font">
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-col text-center w-full mb-20">
-      <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Master Cleanse Reliac Heirloom</h1>
-      <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke farm-to-table. Franzen you probably haven't heard of them man bun deep jianbing selfies heirloom.</p>
+      <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">My Beautiful Girl</h1>
+      <p class="lg:w-2/3 mx-auto leading-relaxed text-base">I've always said time doesn't matter for me. What you have made me feel in the last 2 months is just unexplainable. You have made Hyderabad infinite times better :) !!! <br>Look how pretty you look in the phottooosssss 💓</p>
     </div>
     <div class="flex flex-wrap -m-4">
       <div class="lg:w-1/3 sm:w-1/2 p-4">
         <div class="flex relative">
           <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="/images/90sHeroine.jpeg">
           <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">
-            <h2 class="tracking-widest text-sm title-font font-medium text-yellow-500 mb-1">THE SUBTITLE</h2>
-            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Shooting Stars</h1>
-            <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
+            <h2 class="tracking-widest text-sm title-font font-medium text-yellow-500 mb-1">The 90s Heroine</h2>
+            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">See My Photography Skills</h1>
+            <p class="leading-relaxed">Me feeling really lucky dating a 90s Heroine. But whom are you looking at huh? </p>
           </div>
         </div>
       </div>
@@ -30,9 +30,9 @@
         <div class="flex relative">
           <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="/images/chowmhallaCandid.jpeg">
           <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">
-            <h2 class="tracking-widest text-sm title-font font-medium text-yellow-500 mb-1">THE SUBTITLE</h2>
-            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">The Catalyzer</h1>
-            <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
+            <h2 class="tracking-widest text-sm title-font font-medium text-yellow-500 mb-1">Chowmahalla</h2>
+            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Candid Awkward Posing</h1>
+            <p class="leading-relaxed">Making awkward pose seem like a perfect shot is our thing maybe no? Happy people:)</p>
           </div>
         </div>
       </div>
@@ -40,9 +40,9 @@
         <div class="flex relative">
           <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="/images/sticker.jpeg">
           <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">
-            <h2 class="tracking-widest text-sm title-font font-medium text-yellow-500 mb-1">THE SUBTITLE</h2>
-            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">The 400 Blows</h1>
-            <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
+            <h2 class="tracking-widest text-sm title-font font-medium text-yellow-500 mb-1">Sticker</h2>
+            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">My Favourite Filter</h1>
+            <p class="leading-relaxed">Replicating my favourite sticker with my favourite person💖 Vibe Check Passeddddd </p>
           </div>
         </div>
       </div>
@@ -50,19 +50,19 @@
         <div class="flex relative">
           <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="/images/golcondaEdited.jpeg">
           <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">
-            <h2 class="tracking-widest text-sm title-font font-medium text-yellow-500 mb-1">THE SUBTITLE</h2>
-            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Neptune</h1>
-            <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
+            <h2 class="tracking-widest text-sm title-font font-medium text-yellow-500 mb-1">Golconda</h2>
+            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">The Best</h1>
+            <p class="leading-relaxed">One of the best and cutest photo we have. I mean look at your baby like Beautiful Smile and The sky behind</p>
           </div>
         </div>
       </div>
       <div class="lg:w-1/3 sm:w-1/2 p-4">
         <div class="flex relative">
-          <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="/images/cuteWithFood.jpeg">
+          <img alt="gallery" class="absolute inset-0 w-full h-full object-cover" src="/images/cuteWithFood.jpeg">
           <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">
-            <h2 class="tracking-widest text-sm title-font font-medium text-yellow-500 mb-1">THE SUBTITLE</h2>
-            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Holden Caulfield</h1>
-            <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
+            <h2 class="tracking-widest text-sm title-font font-medium text-yellow-500 mb-1">7 Behenein</h2>
+            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Cute With Food</h1>
+            <p class="leading-relaxed">See how Tanya's face changes from tired to happy kid when she sees food <br> Bubble tea and bubbly you :)</p>
           </div>
         </div>
       </div>
@@ -70,9 +70,9 @@
         <div class="flex relative">
           <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="/images/reflection.jpeg">
           <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">
-            <h2 class="tracking-widest text-sm title-font font-medium text-yellow-500 mb-1">THE SUBTITLE</h2>
-            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Alper Kamu</h1>
-            <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
+            <h2 class="tracking-widest text-sm title-font font-medium text-yellow-500 mb-1">Reflection</h2>
+            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Happier With You</h1>
+            <p class="leading-relaxed">How random simple pictures can also come out this perfect. Everyone should learn the art of photography from Youuu</p>
           </div>
         </div>
       </div>
