--- a/note.html
+++ b/note.html
@@ -31,20 +31,21 @@
          You understand my tech and code stuff also since you listen to it with so much seriousness and
          you give relatable examples also ;) 
          You know I was never a person who would admire sunrise and sunsets and stuff like that utna zyada. But now
-         I notice them everytime. I notice Aeroplanes and scream Aeroplaaannneeeeee.
+         I notice them everytime. I notice Aeroplanes and scream Aeroplaaannneeeeee just like you do.
          I notice the small things more and I try to find positivity in almost every situation.
          Best Company ka asar you know?
          One thing that I admire the most about you is how you do everything so passionately and put your best into it
          and I am very very proud of you for everything you've achieved and everything you do and know that it's just the
-         I was just waiting like crazy for your exams to get over so that we can meeetttttt.
+         start. I was just waiting like crazy for your exams to get over so that we can meeetttttt.
          I love spending time with you, talking to you, sharing things I never thought I would share with anyone.
-         I love how you put equal efforts and value me and give me your time.💓
-         I love how you remember each and every little detail that I tell you and find some reference to remember them
+         I love how you put equal efforts and value me and care for me and give me your time.💓
+         I love how you remember each and every little detail that I tell you and find some reference to remember them.
+         You make me a better person :)
          I made the best decision of not giving up on bumble lol.
          What we have is very special and I want this to grow only:)
          Thankyou for everything My Beautiful Girl.
          I think its safe to say that You're the best thing that has ever happened to me.
-         You're the sweetest💓 
+         You're a Sweetheartttt💓 
          
       </p>
       <span class="inline-block h-1 w-10 rounded bg-yellow-500 mt-8 mb-6"></span>
