--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 <body class="bg-gray-100">
   <div class="flex justify-center items-center h-screen">
     <div class="p-10 bg-white rounded shadow-md">
-      <h1 class="text-2xl font-bold mb-5">Login</h1>
+      <h1 class="text-2xl font-bold mb-5">Tanya is it you??!?!!</h1>
       <form onsubmit="return authenticate()">
         <div class="mb-5">
-          <label class="block font-bold mb-1" for="username">Username</label>
+          <label class="block font-bold mb-1" for="username">Name</label>
           <input class="w-full px-4 py-2 border rounded" type="text" id="username" name="username">
         </div>
         <div class="mb-5">
-          <label class="block font-bold mb-1" for="password">Password</label>
+          <label class="block font-bold mb-1" for="password">Secret Date</label>
           <input class="w-full px-4 py-2 border rounded" type="password" id="password" name="password">
         </div>
         <div class="text-red-500 mb-5" id="error"></div>
-        <button class="bg-blue-500 hover:bg-yellow-500 text-white font-bold py-2 px-4 rounded" type="submit">Login</button>
+        <button class="bg-blue-500 hover:bg-yellow-500 text-white font-bold py-2 px-4 rounded" type="submit">Happiness</button>
       </form>
     </div>
   </div>
