--- a/note.html
+++ b/note.html
@@ -39,6 +39,7 @@
          start. I was just waiting like crazy for your exams to get over so that we can meeetttttt.
          I love spending time with you, talking to you, sharing things I never thought I would share with anyone.
          I love how you put equal efforts and value me and care for me and give me your time.💓
+         I love your GoodMorningggg Teextsss because it tells me you thought about me when you woke up :)
          I love how you remember each and every little detail that I tell you and find some reference to remember them.
          You make me a better person :)
          I made the best decision of not giving up on bumble lol.
