--- a/gallery.html
+++ b/gallery.html
@@ -68,7 +68,7 @@
       </div>
       <div class="lg:w-1/3 sm:w-1/2 p-4">
         <div class="flex relative">
-          <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="/images/reflection.jpeg">
+          <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-bottom-top" src="/images/reflection.jpeg">
           <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">
             <h2 class="tracking-widest text-sm title-font font-medium text-yellow-500 mb-1">Reflection</h2>
             <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Happier With You</h1>
