First page changes

--- a/first.html
+++ b/first.html
@@ -17,7 +17,7 @@
       <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Right People
         <br class="hidden lg:inline-block">Wrong Places
       </h1>
-      <p class="mb-8 leading-relaxed">Hello Ms Adorable, Here's a little something for you :))))</p>
+      <p class="mb-8 leading-relaxed">Hello Ms Adorable, Here's a little something for you :)))) I am very bad at making these things but I hope you like it💕 </p>
       <div class="flex justify-center">
         <a href="/gallery.html" class="inline-flex text-white bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded text-lg">Gallery</a>
         <a href="/note.html" class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">Letter</a>
